--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-simple-typewriter": "^5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
